--- a/rogersj/index.html
+++ b/rogersj/index.html
@@ -316,7 +316,222 @@ In the end, life cycle thinking changes the mindset entirely. It pulls focus awa
 
 
 
-         <!-- Module 2.2 Blog Post Starts here -->
+         <article class="blog-post">
+          <h2>Introduction: Why Supporting User Thinking Matters</h2>
+           <p>
+    When most people think about design, they usually picture colors, layouts, or how modern an interface looks.
+    While visual appearance is important, the true purpose of design goes much deeper. Good design supports how users
+    think, remember information, and make decisions while interacting with technology. Instead of forcing people to
+    struggle through confusing steps, effective design reduces mental effort and helps users move through tasks with
+    clarity and confidence.
+  </p>
+   <p>
+    This idea is especially important today because people rely on digital systems for nearly everything, including
+    communication, banking, education, and security. When interfaces are poorly designed, the consequences are not just
+    minor frustrations. Users may misunderstand instructions, ignore important warnings, or make mistakes that expose
+    personal information. In cybersecurity, these small moments of confusion can lead to serious vulnerabilities. This
+    shows that usability and security are closely connected, since protecting systems also requires supporting the
+    people who use them.
+  </p>
+
+   <p>
+    Learning about concepts such as cognitive load, mental models, consistency, and feedback has changed the way I view
+    technology. I no longer see design as something purely visual. Instead, I see it as a psychological process that
+    shapes user behavior. Understanding how design supports human thinking is essential for creating systems that are
+    not only functional, but also safe, trustworthy, and easy to use.
+  </p>
+  <h2>Cognitive Load, Fitts’s Law, and Security Implications</h2>
+ <p>
+    One of the hardest parts of using technology isn’t the technology itself. It’s the thinking it demands.
+    This is known as <strong>cognitive load</strong>, the mental effort required to finish a task. And honestly, people don’t
+    have much mental space to spare. Working memory is limited. When a screen throws too many choices, confusing
+    wording, or extra steps at a user, things start to break down. Mistakes happen. People hesitate. Sometimes they just quit.
+    Good design tries to prevent that. It removes friction so the user can focus on the goal, not the struggle of figuring
+    the system out.
+  </p>
+  <p>
+    This connects closely to <strong>Fitts’s Law</strong>, a principle that sounds technical but feels obvious once you notice it.
+    The time it takes to click something depends on how big it is and how far away it sits. Big, nearby buttons are easy.
+    Small, distant ones are frustrating (Yablonski, 2020). Designers know this. That’s why important actions are large,
+    centered, and easy to reach. It saves effort. Physical effort, yes. But also mental effort. Everything just feels smoother.
+  </p>
+   <p>
+    But here’s where it gets interesting. The same design choices that help users can also create risk. People naturally
+    choose the fastest, easiest action. We all do it. So when an interface pushes quick interaction, users may stop pausing
+    to think. In security situations, that pause matters. Without it, deceptive prompts or unsafe actions become easier to
+    trigger. Research in human-centered cybersecurity keeps showing the same pattern: when users must make careful
+    security decisions while mentally overloaded, errors rise fast. This creates a tension designers can’t ignore.
+    Usability should feel effortless, but security requires moments of attention.
+  </p>
+   <figure>
+    <img src="https://images.unsplash.com/photo-1644143155332-2ae7baf7d32f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGFwcCUyMGRhc2hib2FyZCUyMHNjcmVlbnxlbnwwfHwwfHx8MA%3D%3D" alt="User interface example showing layout and visual hierarchy" width="700">
+    <figcaption>
+      <strong>Figure 1.</strong> Example interface layout that relates to cognitive load and visual hierarchy.
+      <em>Image by  Unsplash.</em>
+    </figcaption>
+  </figure>
+   <h2>Mental Models, Consistency, and Feedback</h2>
+    <p>
+    People don’t walk into technology with an empty mind. They bring expectations. Memories. Habits. Little guesses about
+    how things should work. This is what designers call a <strong>mental model</strong>. It’s the internal picture a user carries
+    before even touching the screen.
+  </p>
+  <p>
+    You can feel this when opening a new app. Without thinking, you look for a gear icon for settings. A trash can means delete.
+    A magnifying glass means search. No one teaches us this every time. We just know. And when an app follows those patterns,
+    everything feels smooth. Almost invisible. But when a system breaks those expectations, confusion shows up fast.
+    Clicks slow down. Trust drops. Even if the feature technically works, it suddenly feels wrong (Norman, 2013).
+  </p>
+  <p>
+    This is where <strong>consistency</strong> becomes powerful. Consistency keeps the experience predictable. Same button styles.
+    Same menu behavior. Same language across screens. Nothing surprising in a bad way. Because when users recognize patterns,
+    they don’t have to think as hard. Recognition is easier than memory, and that shift reduces mental strain and errors
+    (Nielsen, 1994).
+  </p>
+   <p>
+    You see this clearly in something simple like a phone login screen. Username on top. Password underneath. A show password
+    eye icon on the right. A clear Sign In button below. Maybe a small Forgot password link. It’s familiar. Almost boring.
+    But that’s the point. Boring design here is good design. It lets the user succeed without thinking too much.
+  </p>
+   <p>
+    Then comes <strong>feedback</strong>, the system’s way of talking back. You press a button. Something should happen. Immediately.
+    A spinner. A color change. A message. Anything that says, “yes, I heard you.” Without feedback, users feel lost. Did it work?
+    Did it fail? Should I click again? Silence from a system is uncomfortable. And in security situations, that silence can lead
+    to risky repeated actions or abandoned tasks (Shneiderman et al., 2016).
+  </p>
+  <figure>
+    <img src="https://plus.unsplash.com/premium_photo-1712762000585-8f304c444a78?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGFwcCUyMGRhc2hib2FyZCUyMHNjcmVlbnxlbnwwfHwwfHx8MA%3D%3D" alt="Clicking or touch interaction image representing target selection" width="700">
+    <figcaption>
+      <strong>Figure 2.</strong> Interaction example connected to target size and selection behavior (Fitts’s Law).
+      <em>Image by Unsplash.</em>
+    </figcaption>
+  </figure>
+   <h2>Cybersecurity, Human Weakness, and Social Engineering</h2>
+
+  <p>
+    This is where everything gets uncomfortable. Because once you understand how people think, you also understand how they can
+    be manipulated. Modern cyberattacks rarely start with advanced code. They start with a person. Tired. Distracted. Rushing.
+    Humans are not hacked through machines first. They’re hacked through behavior. Attackers know this, and they design their
+    attacks around it.
+  </p>
+
+  <p>
+    Phishing emails are a perfect example. They don’t just rely on fake links. They rely on urgency. Big buttons. Clear calls
+    to action. “Verify now.” “Reset password.” “Unusual activity detected.” The message is designed to feel important and fast.
+    No time to think. Just click.
+  </p>
+
+  <p>
+    Malware downloads follow the same pattern. Fake update screens. Large Install buttons. Tiny close icons tucked into corners.
+    The interface pushes users toward the easiest action. That’s not accidental. Attackers understand that when something looks
+    familiar and effortless, people trust it. Especially on mobile devices, where touch targets and speed matter even more.
+  </p>
+
+  <p>
+    Research on human factors in cybersecurity shows that users are often blamed for these mistakes, but the systems themselves
+    create the conditions for failure. When security decisions are forced during moments of stress or confusion, error rates rise.
+    Ethics and awareness training can reduce this, but only if systems are designed to support clearer thinking instead of rushing
+    users toward action (Awodele et al., 2026).
+  </p>
+
+  <p>
+    What makes this especially dangerous is that the attacks can look like good design. Clean layouts. Familiar icons. Smooth flows.
+    The same UX principles meant to help users are flipped and weaponized. The difference is intent. One side wants to protect the user.
+    The other wants to trick them just long enough.
+  </p>
+
+  <p>
+    Understanding this changes how security should be approached. Defenses cannot be purely technical. They must account for psychology.
+    Systems must slow users down at the right moments. Force attention when it matters. Provide warnings that are clear, not ignorable.
+    Supporting user thinking becomes a form of defense. Even outside of security, research on interactive visualization shows that design
+    choices can shape user understanding and decision-making, especially when systems are built to communicate information clearly
+    (Liang, 2026).
+  </p>
+   <figure>
+    <img src="https://images.unsplash.com/photo-1585900464046-f713a61424dd?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Y3liZXIlMjBzZWN1aXJ0eXxlbnwwfHwwfHx8MA%3D%3D" alt="Cybersecurity themed image representing digital risk or security warnings" width="700">
+    <figcaption>
+      <strong>Figure 3.</strong> Cybersecurity concept image supporting the discussion of social engineering and user behavior.
+      <em>Image by Unsplash.</em>
+    </figcaption>
+  </figure>
+   <h2>Conclusion and Reflection</h2>
+
+  <p>
+    Looking back at these ideas, what stands out most is how invisible good design really is. When technology works well, people
+    rarely notice the effort behind it. They simply move forward, finish the task, and continue with their day. But when design
+    fails, the experience changes immediately. Confusion replaces confidence. Small mistakes turn into real consequences.
+    This is especially true in cybersecurity, where a single rushed decision can expose private information or open the door to an attack.
+  </p>
+
+  <p>
+    Learning about cognitive load, mental models, consistency, and feedback has changed the way I see everyday technology.
+    I pay more attention now. I notice when something feels easy, and I question why. I also notice when something feels stressful
+    or unclear. Those moments are not just bad luck. They are design choices. Realizing this makes user experience feel less like
+    decoration and more like responsibility.
+  </p>
+
+  <p>
+    What affects me most is understanding how the same psychological principles that help users can also be used against them.
+    That idea is uncomfortable, but important. It means protecting systems is not only about stronger code or better tools.
+    It is about supporting clearer thinking. Slowing people down at the right moment. Designing for awareness instead of speed.
+  </p>
+
+  <p>
+    Good design, in the end, is not about screens. It is about people. And protecting people is what makes technology truly secure.
+  </p>
+
+</article>
+<footer>
+
+  <h2>References</h2>
+
+  <ul>
+    <li>
+      Awodele, S. O., Ojuawo, O. O., Fayemi, T. A., Faruna, J. O., Chukwulobe, I.,
+      Olorunyomi, O. B., &amp; Mustapha, M. M. (2026).
+      <em>Ethical perspectives in mitigating human factors in cybersecurity</em>.
+      Multidisciplinary Journal of Engineering, Technology and Sciences, 3(1).
+      https://nigerianjournalsonline.org/index.php/MJETS/article/view/3665
+    </li>
+
+    <li>
+      Liang, X. (2026).
+      <em>AI-driven culturally aware interactive visualization: A design methodology for cross-cultural user experience</em>.
+      Annals of the New York Academy of Sciences, 1556(1), e70198.
+      https://doi.org/10.1111/nyas.70198
+    </li>
+
+    <li>
+      Nielsen, J. (1994).
+      <em>Usability engineering</em>.
+      Academic Press.
+    </li>
+
+    <li>
+      Norman, D. A. (2013).
+      <em>The design of everyday things</em> (Revised and expanded ed.).
+      Basic Books.
+    </li>
+
+    <li>
+      Shneiderman, B., Plaisant, C., Cohen, M., Jacobs, S., Elmqvist, N., &amp; Diakopoulos, N. (2016).
+      <em>Designing the user interface: Strategies for effective human-computer interaction</em> (6th ed.).
+      Pearson.
+    </li>
+
+    <li>
+      Yablonski, J. (2020).
+      <em>Laws of UX: Using psychology to design better products and services</em>.
+      O’Reilly Media.
+    </li>
+  </ul>
+
+</footer>
+
+
+
+
+
 
          <!-- Module 2.3 Blog Post Starts here -->
 
