--- a/hendersons/index.html
+++ b/hendersons/index.html
@@ -146,7 +146,40 @@
           </article>
 
          <!-- Module 2.2 Blog Post Starts here -->
-
+          <article>
+            <header class="article-header">
+               <h2>Module 2.2 Blog Post</h2>
+            </header>
+            <h3>What are Memory and Mental Models?</h3>
+            <p>This may seem like a simple question, but a definitive answer must be defined so that this post can have a stable ground floor to operate from when it comes to definitions and the conceptual understanding. With this in mind I will be pulling my definition for what memory is 
+               from Designing with the Mind in Mind, with a paraphrased summary of how the book describes it. Memory is what allows us to learn how to use tools, remember previous experiences, and retain knowledge for use from one session to the next (Johnson, 2021). This is not all of what 
+               memory is or does for people but for the purposes of this blog post this is good enough of an understanding. Mental models on the other hand are exactly what they sound like, models built in the mind, but more detail is needed than just that of course. Mental models 
+               are summarizations of the world around us built by the mind to make things easier to understand and deal with by the human mind. If you want a good quote to use that summarizes what I was trying to say better, “A mental model is a model that is constructed and simulated within a 
+               conscious mind” (Merrit, 2016), this holds the essence of what I was trying to get at. With these two concepts established we can move on to the next section of this post, how these two influence user interaction. </p>
+            <h3>Memory, Models, and User Interaction</h3>
+            <p>Now with the two major definitions set down, we need to know what is meant when user interaction is mentioned. User interaction is just when a user/person interacts with a feature of a system, design, or structure, in this case we will be focusing on digital interactions 
+               due to the overall focus of these blog posts, but the ideas introduced here can also be used in the world outside of circuits and wire. Knowing these things, we can look at how memory affects how people interact with systems. One of the big parts that memory contributes to user 
+               interaction is the ability to remember what features do and where they are located. This is deeply important because it allows for people to learn how systems work and become more efficient with their use, however it can be a double bladed sword on occasion as the same ability 
+               that allows for efficiency to grow also makes a sudden change, like a software update that reorganizes things, will throw people off for a while and cause speed to drop. That is why you generally do not see major changes to user interfaces happen often outside of a generational 
+               change, an example of that would be the shift from Windows 10 to Windows 11, which can justify a major change in layout and functionality of a user interface. </p>
+            <p>Mental models have larger scale than memory when it comes to user interaction, it sets the expectations going into new experiences by pulling on the memory of previous experiences to get an idea of what to expect from an upcoming task or endeavor. An example of this is when a
+                new system is described to you as ‘like’ another thing, the brain starts to build an idea of what to expect off of the user interface or functionality of the referenced thing. You could describe an application like Microsoft Word as ‘like’ a typewriter, this misses several key 
+                features of what Word is but it distils the essence of it into something that can be understood by someone who knows what a typewriter is granting them some ground to stand on when it comes to getting started at least. An example of a bad mental model harming the initial adoption 
+                of a new user interface is… the transition from Windows 10 to 11 really, there were many minor format changes and functionality changes when the new version was released that made the initial adoption rather difficult for the early switchers and made enthusiasm for the new product 
+                crater out.</p>
+            <h3>Reasons for Consistency</h3>
+            <p>I have brushed against this topic in my previous paragraphs, but I have not directly said anything about it, being consistent with other user interfaces is a good idea for a new user interface. There are several reasons why, one is that it allows users mental models to work for 
+               them instead of against making adapting new systems easier. Being externally consistent makes an environment where “users do not have to learn new representations for each task… allow users to complete new tasks without having to learn a whole new toolset” (Wong, 2019). There is a
+                law that helps with the structure of making things consistent, Tesler’s Law. This law argues that spending development time to reduce complexity for users will save enough time on a grand scale to make the added app complexity worth the overall cost in development time (Yablonski,
+                 2024). All of this is an argument to make things simple for the average user because it will make them more efficient where it matters and happier with the end product if it comes in an easy to understand package.</p>
+            <footer class="article-footer">
+               <h3>Sources:</h3>
+                  <ol>Johnson, J. (2021). <em>Designing with the mind in mind : simple guide to understanding user interface design guidelines</em> (Third edition.). Morgan Kaufmann Publishers.</ol>
+                  <ol>Merritt, J. (2016). <em>What Are Mental Models?</em> The Systems Thinker. <a href="https://thesystemsthinker.com/what-are-mental-models/">https://thesystemsthinker.com/what-are-mental-models/</a></ol>
+                  <ol>Wong, E. (2019). <em>Principle of Consistency and Standards in User Interface Design</em>. The Interaction Design Foundation; UX courses. <a href="https://www.interaction-design.org/literature/article/principle-of-consistency-and-standards-in-user-interface-design">https://www.interaction-design.org/literature/article/principle-of-consistency-and-standards-in-user-interface-design</a></ol>
+                  <ol>Yablonski, J. (2024). <em>Laws of UX</em> (2nd ed.). O'Reilly Media, Inc.</ol>
+            </footer>
+          </article>
          <!-- Module 2.3 Blog Post Starts here -->
 
          <!-- Module 3.1 Blog Post Starts here -->
