--- a/fry-duec/index.html
+++ b/fry-duec/index.html
@@ -165,7 +165,74 @@
             </footer>
          </article>
          <!-- Module 2.2 Blog Post Starts here -->
-
+         <article>
+            <header class="article-header">
+               <h2>Module 2.1 Blog Post</h2>
+            </header>
+            <figure>
+                <img
+                    src="brain1.jpg"
+                    alt="Childrens toy in the shape of a head."
+                    width="300"
+                    height="450">
+                <figcaption>
+                    Muddled mind by Luke Jones is licensed under Unsplash
+                </figcaption>
+            </figure> 
+            <h3>Introduction</h3>
+               <p>As explored in the previous blog post, the area of Human-Centered Design is a cornerstone of designing for human usability. The field of Human- Centered Design (HCD) focuses on a fundamental understanding of the human mind; its capabilities and its limitations. Successful design is not merely choosing a passable way of presenting content but understanding the deeper psychological concepts behind certain design choices. It requires a deep understanding of how the human mind interacts with various stimuli. By examining the influence of memory and mental models, leveraging principles like consistency and feedback, and consciously mitigating unnecessary cognitive demands through laws like Tesler’s, designers can create systems that feel natural and intuitive for old and new users alike.</p>            
+            <h3>Memory and Mental Models</h3>
+                <p>Human memory is not a flawless storage system but an often failing and associative process. Human memory is less akin to how digital storage systems work and more like an old journal fraying at the edges. How a user interacts with a system often relies on their experience with past systems a la Jakob’s law referred in the last blog post. Short-term memory is the mental activity where conscious processing occurs (Johnson, 2014, p.104). Miller’s  law established a basic fundamental understanding of short-term memory, suggesting a capacity of about seven, give or take, bits of distinct information (source). Designers of interactive systems should keep in mind the cognitive cost they are asking of their users. For example, requiring users to remember a ten character code while completing a separate unrelated process is probably too much.</p>
+                <p>In contrast, long-term memory stores our knowledge of the world and of interactions (Johnson, 2014, p. 104). We retrieve information from our long-term memory and use it in conjunction with stimuli collected in our short-term memory to use our working memory. From an HCD perspective, its most critical output is the mental model. A mental model is an internal representation of how a system works, derived from experience, instruction, or analogy (Johnson, 2014, p.183). Users do not interact with a designer’s system map; they interact with their mental model of it. For instance, most people possess a mental model of a word processor based on the physical metaphor of a typed page, with concepts like margins, fonts, and a cursor. Another reason why it is so important for designers to keep in mind Jakob’s Law (Yablonski, 2024, p.1) . Most users are going to use your design with a preconceived mental model of it based on past experiences. Of course, users will adjust their model of your system gradually with repeated use. Conversely, a design that violates a user’s mental model and forces the user to either build a new, unfamiliar model or constantly translate between their model and the system’s behavior, will be less intuitive and harder to use.</p>
+                <p>The power of mental models is illustrated by universal symbols. A floppy disk icon for “save” leverages a generational model, now more a cultural convention than a literal analogy. Like how a kid will use a thumb and pinky finger out motion to simulate a phone call. A shopping cart icon on an online retailer’s shop is another common example. When these models are consistent across applications, users transfer their knowledge seamlessly, reducing learning time for each system. However, when a designer arbitrarily changes a paradigm, for instance, redefining universal standards users expect, they break the user’s predictive model, forcing conscious recall and increasing cognitive strain. Therefore, effective interaction design must first understand the existing mental models of its user base and then construct an interface that maps them as transparently as possible, while carefully supporting the development of new models when necessary.</p>
+                            <figure>
+                <img
+                    src="brain2.jpg"
+                    alt="A clear plastic model in the shape of a brain."
+                    width="250"
+                    height="250">
+                <figcaption>
+                    Untitled by Maxim Berg is licensed under Unsplash
+                </figcaption>
+            </figure> 
+            <h3>Pillars Of Mental Models</h3>
+            <p>To assist in helping a user quickly form a mental map of a system, designers should adhere to consistency and predictability. The mind is good at simulating mental models of our physical reality but less so when it comes to abstract systems (Merritt, 2016).  Consistency is the principle that similar actions should be performed in similar ways, and similar elements should look and behave similarly across the system (Johnson, 2014, p.184). It operates on multiple levels: internal consistency within a single product, external consistency across similar products. Consistency reinforces the user’s mental model. When clicking a underlined blue piece of text reliably leads to a hyperlink, or when a gear icon always signifies settings, users can stop questioning basic interactions and focus on what makes an individual system unique. It turns learned actions into automatic, low-cognitive-cost behaviors. Inconsistency, by contrast, forces the user to treat every situation as novel, re-engaging working memory to solve a puzzle they thought they already understood.</p>
+            <p>Task-Focus is the complementary principle that the interface must remain consistent and focused (source). Thinking about it, we use systems to complete a purpose.  Tech jargon should be kept to an absolute minimum. When a user is exposed to a new concept, it should be pertinent to a system’s focus, not on the technology (Johnson, 2014, p. 191). For example, if a user’s session on a system times out, they shouldn’t be asked to ‘reauthenticate’ they should be asked to ‘re-login’. Users unfamiliar with technology will be confused by what ‘authentication’ means but most users will be familiar with what ‘re-login’ is asking them to do.</p>
+            <h3>The Cost Of Cognitive Load</h3>
+                <P>Cognitive load refers to the total mental effort being used in working memory (Johnson, 2014, p.184). Good design minimizes unnecessary cognitive load, the effort spent on understanding the interface itself, so that the user’s mental resources can be devoted to the actual load of the unique task. Poor design catastrophically increases extraneous load. Design should be task-focused in order to keep cognitive load low. When a system requires too much cognitive load, users feel overwhelmed and the unique purpose of the system loses focus (Whitenton, 2013).</P>
+                <P>From personal experience, trying to play a new video game with unfamiliar controls is a good example of unnecessary cognitive load. Most video games with keyboard controls use the spacebar as a jump button, when a game changes that to another key like the shift key, it places an unnecessary cognitive load on the user. First, the cognitive load of needing to consistently remember an inconsistent control scheme directly competes with the real load of the game itself. This violates the consistency tenet that the tool should disappear, leaving the user engaged with the task of the unique system.</P>
+            <h3>Tesler’s Law and Fundamental Principles</h3>
+            <p>To combat issues of cognitive load, designers can anchor their decisions in fundamental UX principles. Tesler’s Law states that for any system, “there is a certain amount of inherent complexity that cannot be eliminated” (Johnson, 2014, p. 107). Good design strives to keep complexity internal, presenting a simple interface to users. For example, Users on google only need to type a search query into a textbox that is front and center. Any complexity that comes with running system engine is kept internal and not put on the user. Conversely, a poorly designed system might ask a non-tech savvy user to configure a system with technical language they are unfamiliar with. Tesler’s Law reminds designers that systems should strive to keep interfaces as simple for users as is possible.</p>
+            <p>Users prefer ‘familiar paths’ whenever it’s possible (Johnson, 2014, p.134). Our mental model is based on our past experiences as well as our current ones. Whenever a user encounters an unfamiliar path, they are forced to take on a cognitive load which is taxing on a user’s attention, especially when a user is already using the system for another purpose. As a designer, it is important to use familiar paths whenever possible to reduce the complexity a user is exposed to. </p>
+            <p>When making simple interfaces, it’s best to be concise (Johnson, 2014, p. 95). Designers often make the mistake of presenting too much information that is unnecessary to a user which increases the cognitive load on a user. A simple and clean interface that is only as complex as necessary is best to keep cognitive load down. It’s especially important to keep text down to the bare minimum needed for max clarity (Johnson, 2014, p. 1). Users want to be able to perform the desired function of the system as easily as possible and without unnecessary steps.</p>
+                        <figure>
+                <img
+                    src="brain3.jpg"
+                    alt="A jellyfish in a shape remisicent of the human brain."
+                    width="200"
+                    height="350">
+                <figcaption>
+                        Untitled by Vino Li is licensed under Unsplash
+                </figcaption>
+            </figure> 
+         <h3>Conclusion</h3>
+         <p>The interaction between a user and an interface is fundamentally a cognitive process, a continuous exchange between the mind’s internal mental model and the system’s external feedback. The success of this exchange hinges on a design philosophy that is empathetic to human cognitive architecture. By respecting the limitations of memory and the power of mental models, designers create interfaces that feel familiar and learnable. By upholding the pillars of consistency and predictability, they create environments that are reduce the cognitive load needed by users to effectively use them. By studying examples of poor design, we learn to identify and eliminate sources of unnecessary cognitive load that frustrate users. And by adhering to guiding principles like Tesler’s Law, designers make informed choices that manage complexity and align with perceptual reality. Ultimately, good interactive designs are result of empathy towards the user. It is the deliberate and skillful practice of reducing the mental cost of using technology, thereby freeing users from unintuitive interfaces and letting them use the system for its unique intended purpose.</p>
+               <footer class="article-footer">
+        <h3>Sources:</h3>
+<ol>
+    <li>Johnson, J. (2014). <em>Designing with the mind in mind : simple guide to understanding user interface design rules. </em> Morgan Kaufmann Publishers/Elsevier.
+</ol>
+<ol>
+    <li>Merritt, J. <em>What Are Mental Models? </em>The Systems Thinker. <a href="https://thesystemsthinker.com/what-are-mental-models/"> https://thesystemsthinker.com/what-are-mental-models/</a></li>
+</ol>
+<ol>
+    <li>Whitenton, K. <em>Minimize cognitive load to maximize usability. </em>(pp. 81–88). Nielsen Norman Group.<a href="https://www.nngroup.com/articles/minimize-cognitive-load/"> https://www.nngroup.com/articles/minimize-cognitive-load/</a></li>
+</ol>
+<ol>
+    <li>Yablonski, J. (2024). <em>Laws of UX : Using Psychology to Design Better Products and Services : Using Psychology to Design Better Products and Services.</em>O’Reilly Media, Incorporated.</li>
+</ol>        
+            </footer>
+         </article>
          <!-- Module 2.3 Blog Post Starts here -->
 
          <!-- Module 3.1 Blog Post Starts here -->
