--- a/congerj/index.html
+++ b/congerj/index.html
@@ -47,8 +47,105 @@
                     </ol>
             </footer>
          </article>
+<article>
+  <h1>Understanding the Systems Engineering Life Cycle and Life Cycle Models</h1>
 
-         <!-- Module 1.2 Blog Post Starts here -->
+  <section>
+    <h2>Defining the Systems Development Life Cycle</h2>
+    <p>
+      The systems development life cycle (SDLC) is a conceptual framework that
+      describes the stages a system passes through from initial idea to retirement.
+      In systems engineering, this life cycle extends beyond software development
+      to include planning, stakeholder analysis, system definition, design,
+      implementation, verification, operation, maintenance, and eventual disposal
+      or replacement (Holt &amp; Weilkiens, 2023).
+    </p>
+
+    <p>
+      Rather than serving as a rigid process, the life cycle provides structure
+      for managing complexity over time. Standards such as ISO/IEC/IEEE 15288
+      emphasize that systems must be managed across their entire lifespan,
+      including evolution and retirement (ISO/IEC/IEEE, 2023).
+    </p>
+  </section>
+
+  <section>
+    <h2>Linear Life Cycle Models</h2>
+    <p>
+      Linear life cycle models organize development into sequential stages that
+      are completed in order. These models emphasize documentation, traceability,
+      and formal approval gates.
+    </p>
+
+    <p>
+      Their main advantage is predictability, which makes them suitable for
+      projects with stable requirements. However, they respond poorly to change,
+      a major limitation for modern digital systems (IBM, 2026).
+    </p>
+  </section>
+
+  <section>
+    <h2>Iterative Life Cycle Models</h2>
+    <p>
+      Iterative models develop systems through repeated cycles of refinement.
+      Early versions of the system are evaluated and improved through feedback.
+    </p>
+
+    <p>
+      This approach reduces risk and supports learning, but requires discipline
+      to prevent scope creep and architectural instability
+      (Holt &amp; Weilkiens, 2023).
+    </p>
+  </section>
+
+  <section>
+    <h2>Incremental Life Cycle Models</h2>
+    <p>
+      Incremental models deliver functionality in planned stages, allowing usable
+      capabilities to be deployed early while maintaining a long-term system
+      vision.
+    </p>
+
+    <p>
+      Incremental development balances flexibility and control, but depends on
+      strong architectural planning to avoid integration problems (IBM, 2026).
+    </p>
+  </section>
+
+  <section>
+    <h2>Why Life-Cycle Thinking Matters for Digital Systems</h2>
+    <p>
+      Life-cycle thinking encourages designers to consider sustainability,
+      adaptability, and long-term responsibility. By accounting for maintenance
+      and evolution, systems engineers create digital systems that remain effective
+      over time (ISO/IEC/IEEE, 2023).
+    </p>
+  </section>
+
+  <footer class="article-footer">
+    <h3>References</h3>
+    <ol>
+      <li>
+        Holt, J., &amp; Weilkiens, T. (2023).
+        <em>Systems engineering demystified</em> (2nd ed.).
+        Packt Publishing.
+      </li>
+      <li>
+        IBM. (2026).
+        <em>What is the software development life cycle (SDLC)?</em>
+        https://www.ibm.com/think/topics/sdlc
+      </li>
+      <li>
+        ISO/IEC/IEEE. (2023).
+        <em>
+          ISO/IEC/IEEE 15288: Systems and software engineering—System life cycle processes
+        </em>.
+        International Organization for Standardization.
+      </li>
+    </ol>
+  </footer>
+</article>
+``
 
          <!-- Module 2.1 Blog Post Starts here -->
 
